--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "port",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lumenbarron.github.io/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
@@ -11,6 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
