--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "port",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lumenbarron.github.io",
+  "homepage": "https://lumenbarron.github.io/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
